--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Memify</string>
     <string name="action_go">Go</string>
-    <string name="reason_label">Question</string>
-    <string name="reason_hint">Upload an image and then ask a question</string>
+    <string name="reason_label">Additional Context</string>
+    <string name="reason_hint">Upload an image and optionally add a theme for your meme.</string>
     <string name="add_image">Add Image</string>
 
 </resources>
